biz-base update