@@ -1,5 +1,6 @@
 package com.iscas.base.biz.config.stomp;
 
+import org.jetbrains.annotations.NotNull;
 import org.springframework.context.Lifecycle;
 import org.springframework.context.SmartLifecycle;
 import org.springframework.http.HttpMethod;
@@ -17,15 +18,15 @@ import org.springframework.web.util.WebUtils;
 
 import javax.servlet.ServletContext;
 import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
+import java.util.Objects;
 
 /**
  * 升级springboot到2.4.0后websocket出现跨域问题处理，重写MyWebSocketHandlerMapping
  *
  * @author zhuquanwen
- * @vesion 1.0
+ * @version 1.0
  * @date 2020/11/25 13:59
  * @since jdk1.8
  */
@@ -35,7 +36,7 @@ public class MyWebSocketHandlerMapping extends SimpleUrlHandlerMapping implement
 
 
     @Override
-    protected void initServletContext(ServletContext servletContext) {
+    protected void initServletContext(@NotNull ServletContext servletContext) {
         for (Object handler : getUrlMap().values()) {
             if (handler instanceof ServletContextAware) {
                 ((ServletContextAware) handler).setServletContext(servletContext);
@@ -74,21 +75,16 @@ public class MyWebSocketHandlerMapping extends SimpleUrlHandlerMapping implement
     }
 
     @Override
-    public CorsConfiguration getCorsConfiguration(Object handler, HttpServletRequest request) {
+    public CorsConfiguration getCorsConfiguration(@NotNull Object handler, @NotNull HttpServletRequest request) {
         Object resolvedHandler = handler;
         if (handler instanceof HandlerExecutionChain) {
             resolvedHandler = ((HandlerExecutionChain) handler).getHandler();
         }
         if (resolvedHandler instanceof CorsConfigurationSource) {
-//            if (!this.suppressCors && (request.getHeader(HttpHeaders.ORIGIN) != null)) {
-
-//            }
-//            return null;
-
             if (resolvedHandler instanceof SockJsHttpRequestHandler)  {
                 String origin = request.getHeader("Origin");
                 CorsConfiguration config = new CorsConfiguration();
-                config.setAllowedOrigins(new ArrayList<>(Arrays.asList(origin)));
+                config.setAllowedOrigins(new ArrayList<>(List.of(origin)));
                 config.addAllowedMethod("*");
                 config.setAllowCredentials(true);
                 config.setMaxAge(365 * 24 * 3600L);
@@ -98,7 +94,7 @@ public class MyWebSocketHandlerMapping extends SimpleUrlHandlerMapping implement
                 SockJsHttpRequestHandler sockJsHttpRequestHandler = (SockJsHttpRequestHandler) resolvedHandler;
                 SockJsService sockJsService = sockJsHttpRequestHandler.getSockJsService();
                 try {
-                    ((DefaultSockJsService) sockJsService).setAllowedOrigins(config.getAllowedOrigins());
+                    ((DefaultSockJsService) sockJsService).setAllowedOrigins(Objects.requireNonNull(config.getAllowedOrigins()));
                 } catch (Exception e) {
                     logger.warn("设置SockJs中corsConfiguration的属性allowedOrigins的值出错", e);
                     throw new StompRegistryException("设置SockJs中corsConfiguration的属性allowedOrigins的值出错", e);
@@ -111,8 +107,8 @@ public class MyWebSocketHandlerMapping extends SimpleUrlHandlerMapping implement
         return null;
     }
 
-    protected boolean checkOrigin(ServerHttpRequest request, ServerHttpResponse response, HttpMethod... httpMethods)
-            throws IOException {
+    @SuppressWarnings({"CommentedOutCode", "AlibabaRemoveCommentedCode", "unused"})
+    protected boolean checkOrigin(ServerHttpRequest request, ServerHttpResponse response, HttpMethod... httpMethods) {
 
         if (WebUtils.isSameOrigin(request)) {
             return true;
